Stopped footer from covering content close to the bottom of the page. Also changed contact page submit button color

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 body {
    position: relative;
-   background-image: url(#);
    background-repeat:no-repeat;
    background-size:100% 100vh;
    background-color: #F5F5F5;
+   min-height: 400px;
+   margin-bottom: 100px;
+   clear: both;
 }
 
 
@@ -37,7 +39,7 @@ hr{
    border-bottom-color: black;
    border-bottom-style: solid;
    border-bottom-width: 1px;
-   margin-bottom: 40px;
+   margin-bottom: 20px;
 }
 .project-name{
    
